# scrapy-webarchive

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements-tests.txt  sitemap.xml  tox.ini
.github/workflows/: docs.yml  release-test.yml  release.yml  test.yml
advanced_usage/: index.html
docs/: advanced_usage.md  index.md  installation.md  settings.md  usage.md
example/: scrapy.cfg
example/webarchive_example/: settings.py  strategies.py
example/webarchive_example/spiders/: quotes.py
installation/: index.html
scrapy_webarchive/: __init__.py  cdxj.py  constants.py  downloadermiddlewares.py  exceptions.py  extensions.py  middleware.py  models.py  resolvers.py  spidermiddlewares.py  strategies.py  utils.py  wacz.py  warc.py  warcio.py
scrapy_webarchive/cdxj/: indexers.py  models.py
scrapy_webarchive/wacz/: constants.py  creator.py  storages.py  wacz_file.py  zip_utils.py
scrapy_webarchive/warc/: readers.py  transformers.py  utils.py  warc.py  writers.py
search/: search_index.json
settings/: index.html
tests/: .gitkeep  __init__.py  conftest.py  test_cdxj.py  test_downloadermiddlewares.py  test_extensions.py  test_middleware.py  test_models.py  test_resolvers.py  test_strategies.py  test_utils.py  test_wacz.py  test_warc.py
tests/data/warc_1_1/: README.md  quotes.wacz
tests/wacz/: test_wacz.py  test_zip_utils.py
usage/: index.html
