[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapy-webarchive"
version = "0.3.0"
dependencies = [
    "Scrapy>=2.9,<2.12",
    "warcio==1.7.4",
    "warc-knot==0.2.5",
    "wacz==0.5.0",
    "cdxj-indexer==1.4.5",
]
requires-python = ">=3.7,<3.13"
authors = []
maintainers = []
description = "A webarchive extension for Scrapy"
readme = "README.md"
keywords = ["Scrapy", "Webarchive", "WARC", "WACZ"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
]

[project.optional-dependencies]
aws = ["boto3"]
gcs = ["google-cloud-storage"]
all = ["boto3", "google-cloud-storage"]

[project.urls]
Documentation = "https://developers.thequestionmark.org/scrapy-webarchive/"
Repository = "https://github.com/q-m/scrapy-webarchive"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4

# Assume Python 3.8
target-version = "py38"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "E501", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
strict = false
ignore_missing_imports = true
python_version = "3.8"
